--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -2,23 +2,37 @@
 name = "logos_node"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
-anyhow = "1.0"
+axum = { version = "0.7", features = ["macros", "http2"] }
 tokio = { version = "1", features = ["full"] }
-axum = "0.6"
-reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
 tower = "0.4"
-tower-http = { version = "0.4.4", features = ["cors"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-once_cell = "1.19"
-prometheus = "0.13"
-rand = "0.8"
-ed25519-dalek = "2"
+tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
+hyper = { version = "1", features = ["http2"] }
+http = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+thiserror = "1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features=["env-filter", "fmt"] }
+ed25519-dalek = { version = "2", features = ["rand_core"] }
+rand_core = "0.6"
 bs58 = "0.5"
+anyhow = "1"
+once_cell = "1"
+prometheus = "0.13"
 hex = "0.4"
 base64 = "0.22"
-jsonwebtoken = "9"
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
+blake3 = "1"
+sled = "0.34"
+dashmap = "5"
+parking_lot = "0.12"
+ipnet = "2"
 
+# ядро
 lrb_core = { path = "../lrb_core" }
+
+[build-dependencies]
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
