--- a/infra/nginx/lrb_wallet.conf
+++ b/infra/nginx/lrb_wallet.conf
@@ -11,10 +11,14 @@ server {
     listen 80;
     server_name _;
 
-    # --- Безопасные заголовки (минимальный набор без ломки фронта) ---
-    add_header X-Frame-Options        SAMEORIGIN;
-    add_header X-Content-Type-Options nosniff;
-    add_header Referrer-Policy        strict-origin-when-cross-origin;
+    # --- Безопасные заголовки ---
+    add_header X-Frame-Options        SAMEORIGIN       always;
+    add_header X-Content-Type-Options nosniff          always;
+    add_header Referrer-Policy        strict-origin-when-cross-origin always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # CSP: только self, без inline/CDN. Разрешаем data: для иконок/картинок в UI.
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self'; connect-src 'self' http: https:; img-src 'self' data:; style-src 'self'; object-src 'none'; frame-ancestors 'none'; base-uri 'none';" always;
 
     # --- Gzip для JSON/JS/CSS/HTML ---
     gzip on;
