--- a/lrb_core/Cargo.toml
+++ b/lrb_core/Cargo.toml
@@ -4,29 +4,26 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1"
+anyhow = { workspace = true }
+thiserror = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+bytes = { workspace = true }
 
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+# крипто/кодеки/идентификаторы
+ring = { workspace = true }
+rand = { workspace = true }
+ed25519-dalek = { workspace = true }
+sha2 = { workspace = true }
+blake3 = { workspace = true }
+hex = { workspace = true }
+base64 = { workspace = true }
+bs58 = { workspace = true }
+uuid = { workspace = true }
+bincode = { workspace = true }
 
-sled = "0.34"
-
-ed25519-dalek = { version = "2", features = ["rand_core"] }
-bs58 = "0.5"
-
-rayon = "1.10"
-
-# криптография
-chacha20poly1305 = { version = "0.10", features = ["std"] }
-rand_core = "0.6"
-sha2 = "0.10"
-hex = "0.4"
-base64 = "0.22"
-blake3 = "1"
-
-# async / сеть (для beacon.rs)
-tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
-
-# утилиты
-uuid = { version = "1", features = ["v4"] }
+# хранилище/сеть/асинхрон
+sled = { workspace = true }
+reqwest = { workspace = true }
+tokio = { workspace = true }
