--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -5,37 +5,51 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-axum = { version = "0.7", features = ["macros", "http2"] }
-tokio = { version = "1", features = ["full"] }
-tower = "0.4"
-tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
-hyper = { version = "1", features = ["http2"] }
-http = "1"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-thiserror = "1"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features=["env-filter", "fmt"] }
-ed25519-dalek = { version = "2", features = ["rand_core"] }
-rand_core = "0.6"
-bs58 = "0.5"
-anyhow = "1"
-once_cell = "1"
-prometheus = "0.13"
-hex = "0.4"
-base64 = "0.22"
-reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
-blake3 = "1"
-sled = "0.34"
-dashmap = "5"
-parking_lot = "0.12"
-ipnet = "2"
+# базовые
+anyhow = { workspace = true }
+bytes = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+tokio = { workspace = true }
+time = { workspace = true }
 
-# JWT для админ-аутентификации (HS256)
-jsonwebtoken = "9"
+# web
+axum = { workspace = true }
+tower = { workspace = true }
+tower-http = { workspace = true }
 
-# ядро
+# локальные
 lrb_core = { path = "../lrb_core" }
+
+# крипто/кодеки/хэши/jwt
+ed25519-dalek = { workspace = true }
+base64 = { workspace = true }
+hex = { workspace = true }
+bs58 = { workspace = true }
+blake3 = { workspace = true }
+uuid = { workspace = true }
+jsonwebtoken = { workspace = true }
+
+# утилиты/структуры/метрики/сеть
+parking_lot = "0.12"
+once_cell = "1.19"
+dashmap = "5.5"
+ipnet = "2.10"
+prometheus = "0.13"
+reqwest = { workspace = true }
+
+# ---- ARCHIVER: SQLite & Postgres (выровнено) ----
+rusqlite = { version = "0.32", features = ["bundled"] }
+r2d2 = "0.8"
+r2d2_sqlite = "0.25"
+
+tokio-postgres = { version = "0.7", features = ["runtime","with-uuid-1"] }
+deadpool-postgres = "0.12"
 
 [build-dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
+
+[features]
+default = []
