--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,55 +1,81 @@
 [package]
+name        = "logos_node"
+version     = "0.1.0"
+edition     = "2021"
+license     = "Apache-2.0"
+description = "LOGOS LRB node: Axum REST + archive + producer + wallet/stake"
+build       = "build.rs"
+
+# --- бинарь узла ---
+[[bin]]
 name = "logos_node"
-version = "0.1.0"
-edition = "2021"
-build = "build.rs"
+path = "src/main.rs"
+
+# --- вспомогательные утилиты (можно закомментировать, если не нужны) ---
+[[bin]]
+name = "mint"
+path = "src/bin/mint.rs"
+
+[[bin]]
+name = "make_tx"
+path = "src/bin/make_tx.rs"
+
+[[bin]]
+name = "bench_burst"
+path = "src/bin/bench_burst.rs"
+
+[lib]
+name = "logos_node"
+path = "src/lib.rs"
 
 [dependencies]
-# базовые
-anyhow = { workspace = true }
-bytes = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-tokio = { workspace = true }
-time = { workspace = true }
+# базовый стек (всё из workspace — единые версии)
+axum.workspace                = true
+tower.workspace               = true
+tower-http.workspace          = true
+tokio.workspace               = true
 
-# web
-axum = { workspace = true }
-tower = { workspace = true }
-tower-http = { workspace = true }
+serde.workspace               = true
+serde_json.workspace          = true
+anyhow.workspace              = true
+thiserror.workspace           = true
+once_cell.workspace           = true
+dashmap.workspace             = true
+tracing.workspace             = true
+tracing-subscriber.workspace  = true
+sha2.workspace                = true   # canonical_msg в API
 
-# локальные
-lrb_core = { path = "../lrb_core" }
+# хранилища/индексация
+sled.workspace                = true
+deadpool-postgres.workspace   = true
+tokio-postgres.workspace      = true
+rusqlite.workspace            = true
+r2d2_sqlite.workspace         = true
 
-# крипто/кодеки/хэши/jwt
-ed25519-dalek = { workspace = true }
-base64 = { workspace = true }
-hex = { workspace = true }
-bs58 = { workspace = true }
-blake3 = { workspace = true }
-uuid = { workspace = true }
-jsonwebtoken = { workspace = true }
+# утилиты/крипта/метрики
+hex.workspace                 = true
+base64.workspace              = true
+bs58.workspace                = true
+ed25519-dalek.workspace       = true
+blake3.workspace              = true
+ipnet.workspace               = true
+prometheus.workspace          = true
+uuid.workspace                = true
 
-# утилиты/структуры/метрики/сеть
+# === ДОБАВЛЕНО (security & utils) ===
+# HMAC-SHA256 для подписи тела моста (deposit/redeem)
+hmac = { version = "0.12", default-features = false }
+# джиттер/phase-mixing в guard
+rand = { version = "0.8", features = ["std","std_rng"] }
+# мьютексы в state.rs (parking_lot::Mutex)
 parking_lot = "0.12"
-once_cell = "1.19"
-dashmap = "5.5"
-ipnet = "2.10"
-prometheus = "0.13"
-reqwest = { workspace = true }
 
-# ---- ARCHIVER: SQLite & Postgres (выровнено) ----
-rusqlite = { version = "0.32", features = ["bundled"] }
-r2d2 = "0.8"
-r2d2_sqlite = "0.25"
+# для bin-утилит
+reqwest   = { workspace = true, features = ["blocking","json"] }
+rand_core = "0.6"
 
-tokio-postgres = { version = "0.7", features = ["runtime","with-uuid-1"] }
-deadpool-postgres = "0.12"
+# ядро
+lrb_core = { path = "../lrb_core" }
 
 [build-dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
-
-[features]
-default = []
