infra: per-instance systemd (StateDirectory, RW paths), PG hardened; docs: FULL BOOK (prod snapshot)

--- a/configs/env/node.env.example
+++ b/configs/env/node.env.example
@@ -1,11 +1,57 @@
-# LOGOS LRB – universal node env example
-LRB_NODE_SK_HEX=CHANGE_ME_64_HEX
-LRB_JWT_SECRET=CHANGE_ME
-LRB_BRIDGE_KEY=CHANGE_ME
-LRB_DATA_DIR=/var/lib/logos
-LRB_NODE_LISTEN=0.0.0.0:8080
-LRB_WALLET_ORIGIN=http://localhost
-LRB_QPS=30
-LRB_BURST=60
+# ========= LOGOS LRB — canonical node env (prod-ready) =========
+# Этот файл — пример. Для прод-ноды скопировать в /etc/logos/keys.env (права 600, владелец logos:logos)
+
+######################
+# Узел / слушатель
+######################
+LRB_NODE_LISTEN=0.0.0.0:8080          # HTTP API
+RUST_LOG=info,hyper=warn,tower_http=warn
+
+######################
+# Ключи/секреты (заменить!)
+######################
+LRB_NODE_SK_HEX=CHANGE_ME_64_HEX      # если используется на уровне модулей
+LRB_JWT_SECRET=CHANGE_ME              # если admin/JWT задействован
+LRB_BRIDGE_KEY=CHANGE_ME              # общий секрет для X-Bridge-Key и HMAC
+
+######################
+# Хранилище / данные
+######################
+LRB_DATA_DIR=/var/lib/logos           # каталог данных ноды (sled и др.)
+# sled будет в: $LRB_DATA_DIR/data.sled
+
+######################
+# Архив (Postgres) — рекомендуется
+######################
+# Пример: postgres://logos:strongpass@127.0.0.1:5432/logos?sslmode=disable
+LRB_ARCHIVE_URL=postgres://logos:strongpass@127.0.0.1:5432/logos?sslmode=disable
+
+######################
+# Мост (rToken) — внешний payout
+######################
+BRIDGE_PAYOUT_URL=https://bridge.example.com
+BRIDGE_PAYOUT_PATH=/api/payout
+# LRB_BRIDGE_KEY — уже выше, используется и как HMAC-ключ
+
+######################
+# Периметр / phase-mixing
+######################
+PHASE_JITTER_ENABLE=true              # включить джиттер 0–7мс на submit/stake/bridge путях
+
+######################
+# Продюсер/слоты/комиссии (при необходимости)
+######################
+SLOT_MS=200                            # длительность слота, если используется из env
+FEE_MIN=0                              # минимальная комиссия (если включишь в бизнес-логике)
+
+######################
+# Параметры rate-limit (если оборачиваешь на периметре)
+######################
+LRB_QPS=30                             # базовый лимит QPS
+LRB_BURST=60                           # burst
 LRB_RATE_BYPASS_CIDRS=127.0.0.1/32,::1/128
-RUST_LOG=info
+
+######################
+# CORS/Origins (кошелёк/веб)
+######################
+LRB_WALLET_ORIGIN=http://localhost     # добавь свои origin'ы на фронт
