--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ data.sled.bak/
 docs/LOGOS_LRB_BOOK/*.md
 docs/snapshots/*
 docs/LOGOS_GLOBAL_CODE_SNAPSHOT_2025-11-26T07-42-12Z.md
+docs/LOGOS_WALLET/LOGOS_WALLET_SNAPSHOT_2025-11-29T10-32-44Z.md
