--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["lrb_core","node"]
+members = ["lrb_core","node","modules/x_guard"]
 resolver = "2"
 
 [workspace.package]
@@ -7,6 +7,15 @@ edition = "2021"
 rust-version = "1.78"
 
 [workspace.dependencies]
+prometheus = "0.13"
+once_cell = "1.19"
+ipnet = "2"
+r2d2             = "0.8"
+r2d2_sqlite      = "0.24"
+rusqlite         = { version = "0.31", features = ["bundled"] }
+tokio-postgres   = "0.7.9"
+deadpool-postgres = "0.14"
+dashmap = "6"
 # web/async
 axum = { version = "0.7", features = ["macros"] }
 tower = "0.5"
